--- a/server/frontend/static/Contact.html
+++ b/server/frontend/static/Contact.html
@@ -1,1 +1,38 @@
-Contact
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <title>Contact Us - Cars Dealership</title>
+</head>
+<body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="/djangoapp/about">About Us</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="/djangoapp/contact">Contact Us</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+<div class="container mt-5">
+    <h1>Contact Us</h1>
+    <div class="row mt-4">
+        <div class="col-md-6">
+            <img src="https://via.placeholder.com/400x300" class="img-fluid rounded" alt="Our Office">
+        </div>
+        <div class="col-md-6">
+            <h3>Get in Touch</h3>
+            <p><strong>Address:</strong> 123 Car Street, Constantine, Algeria</p>
+            <p><strong>Phone:</strong> +213 555 00 11 22</p>
+            <p><strong>Email:</strong> support@dealership.com</p>
+            <p><strong>Working Hours:</strong> Sun - Thu, 9 AM - 5 PM</p>
+        </div>
+    </div>
+</div>
+</body>
+</html>
