--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="/static/bootstrap.min.css">
     <title>About Us - Cars Dealership</title>
 </head>
 <body>
@@ -12,27 +14,27 @@
 
 <div class="container mt-5">
     <h1>About Us</h1>
-    <p>Welcome to Best Cars Dealership, your trusted partner in finding the perfect vehicle since 2010.</p>
+    <p>Welcome to Best Cars Dealership, where we provide the finest selection of vehicles with a commitment to quality and customer satisfaction since 2010.</p>
     
     <div class="row mt-4">
-        <div class="col-md-4">
-            <img src="https://via.placeholder.com/150" class="img-fluid rounded-circle" alt="CEO">
+        <div class="col-md-4 text-center">
+            <img src="https://images.pexels.com/photos/220453/pexels-photo-220453.jpeg?auto=compress&cs=tinysrgb&w=150" class="img-fluid rounded-circle" alt="CEO" style="width: 150px; height: 150px; object-fit: cover;">
             <h3>Ahmed Benali</h3>
             <p><strong>Role:</strong> CEO & Founder</p>
             <p>Ahmed has over 15 years of experience in the automotive industry in Algeria.</p>
             <p>Email: ahmed@dealership.com</p>
         </div>
         
-        <div class="col-md-4">
-            <img src="https://via.placeholder.com/150" class="img-fluid rounded-circle" alt="Sales Manager">
+        <div class="col-md-4 text-center">
+            <img src="https://images.pexels.com/photos/415829/pexels-photo-415829.jpeg?auto=compress&cs=tinysrgb&w=150" class="img-fluid rounded-circle" alt="Sales Manager" style="width: 150px; height: 150px; object-fit: cover;">
             <h3>Sarah Mansouri</h3>
             <p><strong>Role:</strong> Sales Manager</p>
             <p>Sarah ensures every customer finds a car that fits their budget and needs.</p>
             <p>Email: sarah@dealership.com</p>
         </div>
 
-        <div class="col-md-4">
-            <img src="https://via.placeholder.com/150" class="img-fluid rounded-circle" alt="Lead Developer">
+        <div class="col-md-4 text-center">
+            <img src="https://images.pexels.com/photos/2379004/pexels-photo-2379004.jpeg?auto=compress&cs=tinysrgb&w=150" class="img-fluid rounded-circle" alt="Lead Developer" style="width: 150px; height: 150px; object-fit: cover;">
             <h3>You (Freelancer)</h3>
             <p><strong>Role:</strong> Lead Full-Stack Developer</p>
             <p>Expert in Django and React, building the future of car retail applications.</p>
