--- a/server/frontend/static/Contact.html
+++ b/server/frontend/static/Contact.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="/static/bootstrap.min.css">
     <title>Contact Us - Cars Dealership</title>
 </head>
 <body>
@@ -23,7 +25,7 @@
     <h1>Contact Us</h1>
     <div class="row mt-4">
         <div class="col-md-6">
-            <img src="https://via.placeholder.com/400x300" class="img-fluid rounded" alt="Our Office">
+            <img src="https://raw.githubusercontent.com/brightsidearab-a11y/xrwvm-fullstack_developer_capstone/refs/heads/main/server/frontend/static/contactus.png" class="img-fluid rounded" alt="Contact Us">
         </div>
         <div class="col-md-6">
             <h3>Get in Touch</h3>
