--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -1,1 +1,6 @@
-<p>Welcome to Best Cars Dealership, where we provide the finest selection of vehicles with a commitment to quality and customer satisfaction since 2010.</p>
+<p>Welcome to Best Cars Dealership, where we provide the finest selection of vehicles with a commitment to quality and customer satisfaction since 2010. Our team of professionals is dedicated to helping you find the perfect car at the right price.</p>
+<div class="team-member">
+    <h3>John Doe</h3>
+    <p>Role: CEO</p>
+    <p>Email: john@dealership.com</p>
+</div>
