--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -1,6 +1,28 @@
-"Welcome to Best Cars Dealership, where we provide the finest selection of vehicles with a commitment to quality and customer satisfaction since 2010. Our team of professionals is dedicated to helping you find the perfect car."
-<div class="team-member">
-    <h3>John Doe</h3>
-    <p>Role: CEO</p>
-    <p>Email: john@dealership.com</p>
+<div class="about-us-section">
+    <h1>About Us</h1>
+    <p>Welcome to Best Cars Dealership, where we provide the finest selection of vehicles with a commitment to quality and customer satisfaction since 2010. Our team of professionals is dedicated to helping you find the perfect car.</p>
+</div>
+
+<div class="team-section">
+    <h2>Our Team</h2>
+    <div class="row">
+        <div class="col-md-4 team-member">
+            <img src="/static/john.jpg" alt="CEO">
+            <h3>John Doe</h3>
+            <p>Role: CEO</p>
+            <p>Email: john@dealership.com</p>
+        </div>
+        <div class="col-md-4 team-member">
+            <img src="/static/jane.jpg" alt="Sales Manager">
+            <h3>Jane Smith</h3>
+            <p>Role: Sales Manager</p>
+            <p>Email: jane@dealership.com</p>
+        </div>
+        <div class="col-md-4 team-member">
+            <img src="/static/alex.jpg" alt="Customer Service">
+            <h3>Alex Brown</h3>
+            <p>Role: Customer Service</p>
+            <p>Email: alex@dealership.com</p>
+        </div>
+    </div>
 </div>
